Tue Jan  7 13:41:16 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/subst.rb : Fix pattern matchig algorithm of the token
	  substitution feature so that the pattern `{ __adlint__any }' can
	  match with both `{}' and `{ ... }'.

Sat Jan  4 05:22:13 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* etc/mesg.d/c_builtin/ja_JP/messages.yml : Fix typo in C0001 message
	  text.

Wed Jan  1 10:25:16 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/parser.y : Add missing mode transition of identifier
	  to typedef-name translation.
	* lib/adlint/cc1/lexer.rb : Add patch of identifier to typedef-name
	  translation mode in order not to abend when multiple typedefed types
	  of struct/union/enum is redeclared in a single typedef declaration
	  again.

	* features/code_check/E0008.feature : Add scenario to reproduce a known
	  bug.

Fri Oct 25 15:06:29 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/type.rb : Add predicate method Type#named? which
	  indicates whether a type has been declared with a tag or not.
	* lib/adlint/cc1/parser.y : Ditto.
	* lib/adlint/cc1/syntax.rb : Ditto.

Fri Oct 25 13:08:26 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Revise the interpreter interface in order
	  to make evaluation modes of notification and side-effects suppression
	  are orthogonal.
	* lib/adlint/cc1/option.rb : Ditto.
	* lib/adlint/cc1/expr.rb : Ditto.
	* lib/adlint/exam/c_builtin/cc1_check.rb : Ditto.

Thu Oct 24 11:16:20 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/syntax.rb : Add equals sign to the init-declarator
	  node in AST.
	* lib/adlint/cc1/parser.y : Ditto.
	* spec/adlint/cc1/ctrlexpr_spec.rb : Ditto.

Wed Oct 16 17:50:37 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam.rb : Clip code-exam passivation feature into
	  Examination::Passivation module in order to easily create passive
	  code-exam classes.
