@@ -35,6 +35,7 @@ etc/mesg.d/c_builtin/ja_JP/messages.yml
 etc/mesg.d/core/en_US/messages.yml
 etc/mesg.d/core/ja_JP/messages.yml
 features/code_check/E0008.feature
+features/code_check/E0016.feature
 features/code_check/E0013.feature
 features/code_check/W0001.feature
 features/code_check/W0002.feature
